
----------------------------------
Release: 3.0.3
Date: 
----------------------------------
Changes/New Features Since 3.0.2:

CAY-1584 Improve Cayenne modeler re-ordering named query in the cayenne map xml
CAY-1590 DDL generation without a live datasource
CAY-1605 Switch Cayenne to use unified Maven repository

Bug Fixes Since 3.0.2:

CAY-1469 Modeler: dbRelationships renaming problem
CAY-1514 ClassCastException when EJQLQuery parameters is null.
CAY-1577 SQL queries for LIKE expressions with escape character generated with syntax errors
CAY-1581 Not-Escaping <> during serialization to *.map.xml
CAY-1583 context.getObjectStore() returning null causing NullpointerException in DataMergeHandler
CAY-1585 SelectQuery automatic cache key needs FetchOffset
CAY-1596 setFetchOffset & setFetchLimit issue under SQL Server 2008 R2 64Bit

----------------------------------
Release: 3.0.2
Date: 
----------------------------------

Improvements Since 3.0.1

CAY-1500 MySQL JDBC Batching
CAY-1575 Error generating Embeddable classes in Cayenne Modeler

Bug Fixes Since 3.0.1:

CAY-1403 Method "readNestedProperty" Should Resolve Through Iterative Invocations onto DataObject and Not Complete Within Cayenne.readNestedProperty
CAY-1432 java.io.NotSerializableException when using OSCache for query cache with prefetches and persitent cache. 
CAY-1444 NPE when persisting a newly instatiated object
CAY-1456 Investigate auto-increment columns on DB2 and switch the adapter policy to support them
CAY-1484 Flattened attribute queries are incorrectly generated
CAY-1485 Memory information for about dialog
CAY-1488 OutOfMemory when selecting "Remove Foreign Keys Mapped as Object Attributes"
CAY-1489 NPE using DataContext.objectFromDataRow for a nested context
CAY-1490 Maven cgen: all and datamap modes can not be activated
CAY-1496 Problem in derby: comparison operators are not supported on Clob object values. 
CAY-1503 POST_LOAD is not called on prefetched objects